# major-pickems-sim

./: .gitignore  Cargo.toml  README.md  justfile  simulate.py
.devcontainer/: Dockerfile  devcontainer.json  fast_cargo_config.toml
data/: 2024_copenhagen_challengers.json  2024_copenhagen_challengers.toml  2024_copenhagen_legends.json  2024_copenhagen_legends.toml  2024_shanghai_legends.json  2024_shanghai_legends.toml  2024_shanghai_opening.json  2024_shanghai_opening.toml  2025_austin_stage_1.json  2025_austin_stage_1.toml  2025_austin_stage_2.json  2025_austin_stage_2.toml  2025_austin_stage_3.json  2025_austin_stage_3.toml  2025_budapest_stage_1.toml  2025_budapest_stage_2.toml  2025_budapest_stage_3.toml
src/: args.rs  criterion.rs  data.rs  lib.rs  main.rs  pprof.rs  simulate.rs  wizard.rs
src/cli/: args.rs  mod.rs  update.rs  wizard.rs
src/datatypes/: mod.rs  name.rs  rating.rs  seed.rs  set.rs  teams.rs
src/reporting/: assess.rs  basic.rs  mod.rs  picks.rs  strength.rs
src/simulate/: matching.rs  mod.rs  reporting.rs  swiss_system.rs  team_set.rs
src/simulate/reporting/: assess.rs  basic.rs  mod.rs  picks.rs  strength.rs
src/simulation/: matching.rs  mod.rs  rng.rs  swiss_system.rs
