[package]
name = "major-pickems-sim"
description = "Tool for analysing pick'ems for Counter-Strike major tournaments."
version = "0.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ndunnett/major-pickems-sim"
repository = "https://github.com/ndunnett/major-pickems-sim"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.1"
ratatui = "0.29.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
tui-textarea = "0.7.0"

[[bin]]
name = "pickems"
path = "src/main.rs"

[profile.dev]
lto = "off"
opt-level = 0
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
