cargo-features = ["profile-rustflags"]

[package]
name = "major-pickems-sim"
description = "Tool for analysing pick'ems for Counter-Strike major tournaments."
version = "0.3.0-prerelease"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ndunnett/major-pickems-sim"
repository = "https://github.com/ndunnett/major-pickems-sim"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
clap = "4.6"
itertools = "0.14"
rand = "0.10"
rand_chacha = "0.10"
ratatui = "0.30"
ratatui-textarea = "0.9"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

[dependencies.pprof]
version = "0.15"
features = ["flamegraph", "prost-codec"]
optional = true

[dev-dependencies]
criterion = "0.8"

[features]
pprof = ["dep:pprof"]

[lib]
name = "pickems"
path = "src/lib.rs"

[[bin]]
name = "pickems"
path = "src/main.rs"

[[bench]]
name = "criterion"
path = "src/criterion.rs"
harness = false

[profile.dev]
lto = "off"
opt-level = 0
panic = "abort"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
rustflags = ["-C", "target-cpu=native"]

[profile.release.build-override]
opt-level = 0
codegen-units = 256

[profile.pprof]
inherits = "release"
strip = false
debug = true
rustflags = ["-C", "link-arg=-Wl,--no-rosegment"]
